--- a/.gitignore
+++ b/.gitignore
@@ -238,6 +238,7 @@ ClientBin/
 *.publishsettings
 orleans.codegen.cs
 test/LyricsAppTests/coveragereport/
+src/LyricsApp/config/
 
 # Including strong name files can present a security risk
 # (https://github.com/github/gitignore/pull/2483#issue-259490424)
